덜 포팅된 부분 추가 및 endpoint 수정
